# software-renderer-cpp

./: .gitignore  CMakeLists.txt  build.sh
assets/: example1.fbx
assets/House/: House.fbx
assets/Stair/: Stair.fbx
assets/Test/: example1.fbx
assets/Test2/: icosphere.fbx  monkey.fbx  test2.fbx  test3.fbx
documents/notes/: rasterization.docx  rvaluelvalue.docx
src/: asset.cpp  asset.h  cubemodel.cpp  cubemodel.h  drawhelper.cpp  drawhelper.h  global.cpp  global.h  helper.cpp  helper.h  helpercurrency.cpp  helpercurrency.h  main.cpp  screenhelper.cpp  screenhelper.h  teapotmodel.cpp  teapotmodel.h
src/common/: camera.cpp  camera.h  fixednumber.cpp  fixednumber.h  matrix.cpp  matrix.h  mytime.cpp  mytime.h  plane.cpp  plane.h  quaternion.cpp  quaternion.h  vector.cpp  vector.h  vectorint.cpp  vectorint.h
src/importer/: fbximporter.cpp  fbximporter.h
src/multithread/: threadpool.cpp  threadpool.h
